Fix display and rendering bugs, prevent podcast notifications from showing on embeds and schedule notifications from showing on non-visible stations.

--- a/web/static/sass/pages/_songs.scss
+++ b/web/static/sass/pages/_songs.scss
@@ -8,7 +8,7 @@
     border-radius: 5px;
   }
   h1.song_title {
-    padding-top: 25px;
+    margin-top: 25px;
   }
   h1.song_title,
   h2.song_artist {
